<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".MainActivity">

            <Button
                android:id="@+id/LessonOnePointOne"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Lesson1_1"
                android:paddingTop="8dp"/>
            <Button
                android:id="@+id/LessonOnePointTwo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Lesson1_2"
                android:paddingTop="8dp"/>
            <Button
                android:id="@+id/LessonOnePointThree"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Lesson1_3"
                android:paddingTop="8dp"/>
            <Button
                android:id="@+id/LessonOnePointFour"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Lesson1_4"
                android:paddingTop="8dp"/>
            <Button
                android:id="@+id/LessonTwoPointOne"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Lesson2_1"
                android:paddingTop="8dp"/>

            <Button
                android:id="@+id/HomeworkLessonTwoPointTwo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/homework_2_2"
                android:paddingTop="8dp"/>

            <Button
                android:id="@+id/LessonTwoPointThree"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Lesson2_3"
                android:paddingTop="8dp"/>

        </LinearLayout>

    </ScrollView>

</layout>
