<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_search"
        android:icon="@drawable/ic_search"
        android:orderInCategory="1"
        android:title="@string/search"
        android:contentDescription="@string/search"
        app:showAsAction="ifRoom" />

    <group>
        <item
            android:id="@+id/menu_settings"
            android:icon="@drawable/ic_settings"
            android:contentDescription="@string/settings"
            android:title="@string/settings" />
        <item
            android:id="@+id/menu_feedback"
            android:icon="@drawable/ic_mail"
            android:contentDescription="@string/feedback"
            android:title="@string/feedback" />
    </group>


</menu>